tests/rosetta/out/Clojure/15-puzzle-game.error
type: error[T015]: index must be an integer
  --> /workspace/mochi/tests/rosetta/x/Mochi/15-puzzle-game.mochi:36:8

 36 |   board[j] = tmp
    |        ^

help:
  Use an `int` value for indexing (e.g., `list[0]`).